# hikka-backup

./: README.md  pyproject.toml  run.py  sync.py
alembic/versions/: 2024_06_15_0059-3da5f06f5a16_initial_migration.py  2024_06_15_0326-fafc54af06f8_added_index_to_path.py  2024_06_16_0111-6d2ab85fff8e_added_local_path.py
app/: utils.py
app/models/: __init__.py  image.py
app/sync/: __init__.py  backup.py  download.py
docs/: alembic.example.ini  settings.example.toml
